--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8080
 
+restconfig.config.connectTimeout=500
+restconfig.config.connectionRequestTimeout=500
+restconfig.config.readTimeout=500
+restconfig.config.maxConnection=20
