--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=8080
 
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=hystrix.stream
+
+hystrix.dashboard.proxy-stream-allow-list=*
+
 restconfig.config.connectTimeout=500
 restconfig.config.connectionRequestTimeout=500
 restconfig.config.readTimeout=500
